--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -48,6 +46,17 @@
          .loader:before{
              animation-delay: 0.5s;
         }
+        .footer {
+         position: fixed;
+         left: 0;
+         bottom: 0;
+         width: 100%;
+         background-color:#172E1A;
+         color:#D2D2D2;
+         text-align: center;
+         vertical-align: inherit;
+         padding:1px;
+       }
         @keyframes loader {
           0%{
              transform: scale(0);
@@ -62,6 +71,10 @@
           }
 
         }
+        #footer1{
+           padding: 0px;
+           margin: 0px;
+        }
     </style>
   </head>
   <body >
@@ -70,7 +83,6 @@
          <br><br><br><br><br>
          <br><br><br>
            <h5 style="font-family: cursive;">📋 നemoranda</h5>
-           ©2021 Gourav Yadav
        </div>
    </div>
 <!-- navbar start -->
@@ -108,7 +120,11 @@
            {% endblock %}
        </div>
   <!-- changing content ends -->
-
+     <div class="footer">
+         <p id='footer1'>©2021 Gourav Yadav</p>
+         <p id='footer1'>📧 <a style="color: #D2D2D2;" href="mailto:gyadav88897@gmail.com">gyadav88897@gmail.com</a></p>
+         
+     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
