--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -50,12 +52,15 @@
          position: fixed;
          left: 0;
          bottom: 0;
+         right:0;
          width: 100%;
          background-color:#172E1A;
          color:#D2D2D2;
          text-align: center;
          vertical-align: inherit;
          padding:1px;
+         border-top-right-radius: 35px;
+         
        }
         @keyframes loader {
           0%{
@@ -74,10 +79,11 @@
         #footer1{
            padding: 0px;
            margin: 0px;
+           font-size: small;
         }
     </style>
   </head>
-  <body >
+  <body id="bdy">
    <div class="loader_bg">
        <div class="loader">
          <br><br><br><br><br>
@@ -86,9 +92,9 @@
        </div>
    </div>
 <!-- navbar start -->
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #172E1A;color: #97B37A;">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #172E1A;color: #97B37A;border-bottom-left-radius: 35px;height:fit-content">
     
-    <a style="color: #D2D2D2;font-family:'Times New Roman', Times, serif" class="navbar-brand" href="/"><h3>📝നemoranda</h3></a>
+    <a style="color: #D2D2D2;font-family:'Times New Roman', Times, serif" class="navbar-brand" href="/"><h4>📝നemoranda</h4></a>
     <button class="navbar-toggler bg-success" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -122,7 +128,7 @@
   <!-- changing content ends -->
      <div class="footer">
          <p id='footer1'>©2021 Gourav Yadav</p>
-         <p id='footer1'>📧 <a style="color: #D2D2D2;" href="mailto:gyadav88897@gmail.com">gyadav88897@gmail.com</a></p>
+         <p id='footer1'> ✉︎<a style="color: #D2D2D2;" href="mailto:gyadav88897@gmail.com">gyadav88897@gmail.com</a></p>
          
      </div>
 
